<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_basic">
        <item
            android:id="@+id/dashboard_fragment"
            android:title="@string/dashboard_title"/>
        <item
            android:id="@+id/client_list_fragment"
            android:title="@string/client_list_title"/>
        <item
            android:id="@+id/horse_list_fragment"
            android:title="@string/horse_list_title"/>
        <item
            android:id="@+id/stable_list_fragment"
            android:title="@string/stable_list_title"/>
    </group>

    <group
        android:id="@+id/grp_extended">
        <item
            android:id="@+id/accounting_fragment"
            android:title="@string/accounting_title"/>
        <item
            android:id="@+id/catalog_fragment"
            android:title="@string/catalog_title"/>
        <item
            android:id="@+id/statistics_fragment"
            android:title="@string/statistics_title"/>
    </group>
    <group
        android:id="@+id/grp_options">
        <item
                android:id="@+id/breed_list_fragment"
                android:title="@string/breed_list_title"/>
        <item
            android:id="@+id/settings_fragment"
            android:title="@string/settings_title"/>
    </group>

</menu>