<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="viewModel"
                type="ch.labrat.anima.features.horse.HorseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"

            tools:context=".features.horse.HorseDetailsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">

                <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="93dp"
                        android:layout_height="85dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:adjustViewBounds="false"
                        android:background="@color/indigo_100"
                        android:contentDescription="@string/avatar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_insert_photo_black_24dp"
                        tools:src="@tools:sample/avatars"/>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInputLayoutName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/stable">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:text="@={viewModel.horse.name}"
                            android:inputType="text"
                            android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutBreed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutName">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/breed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/breed"
                            android:singleLine="true"
                            android:text="@={viewModel.horse.breed}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:id="@+id/keeping"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/keeping"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayoutBreed"
                        app:layout_constraintStart_toStartOf="parent"/>

                <Button
                        android:id="@+id/buttonDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@{viewModel.horse.dateOfBirth.toString()}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewDob"/>

                <TextView
                        android:id="@+id/textViewDob"
                        style="@style/InputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/dob"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/buttonGender"/>

                <TextView
                        android:id="@+id/textViewGender"
                        style="@style/InputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/gender"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/keeping" android:layout_marginTop="8dp"/>

                <TextView
                        android:id="@+id/textViewOwner"
                        style="@style/InputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/owner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/buttonDob"/>

                <Button
                        android:id="@+id/buttonGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/select_gender"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewGender"/>

                <Button
                        android:id="@+id/buttonOwner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@={viewModel.horse.owner}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewOwner"/>


                <TextView
                        android:id="@+id/veterinary"
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/veterinary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/buttonOwner"/>

                <TextView
                        android:id="@+id/stable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/stable"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fetterPositionTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/physiqueSpinner">

                    <EditText
                            android:id="@+id/fetterPosition"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fetter_position"
                            android:inputType="text"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                        android:id="@+id/physiqueSpinner"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:hint="@string/fetter_position"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/physiqueSpinnerLabel"/>

                <TextView
                        android:id="@+id/physiqueSpinnerLabel"
                        style="@style/InputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/physique"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/veterinary"/>

                <TextView
                        android:id="@+id/fetterPositionLabel"
                        style="@style/InputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/fetter_position"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fetterPositionTextInputLayout"/>

                <Spinner
                        android:id="@+id/fetterFLSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toStartOf="@+id/frTextView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/flTextView"
                        app:layout_constraintTop_toTopOf="@+id/flTextView"/>

                <Spinner
                        android:id="@+id/fetterFRSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/frTextView"
                        app:layout_constraintTop_toTopOf="@+id/frTextView"/>

                <Spinner
                        android:id="@+id/fetterHLSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toStartOf="@+id/fetterHRTextView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/fetterHLTextView"
                        app:layout_constraintTop_toTopOf="@+id/fetterHLTextView"/>

                <Spinner
                        android:id="@+id/fetterHRSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/fetterHRTextView"
                        app:layout_constraintTop_toTopOf="@+id/fetterHRTextView"/>

                <TextView
                        android:id="@+id/flTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/fl"
                        app:layout_constraintEnd_toStartOf="@+id/fetterFLSpinner"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fetterPositionLabel"/>

                <TextView
                        android:id="@+id/frTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fr"
                        app:layout_constraintEnd_toStartOf="@+id/fetterFRSpinner"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/fetterFLSpinner"
                        app:layout_constraintTop_toTopOf="@+id/fetterFLSpinner"/>

                <TextView
                        android:id="@+id/fetterHLTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/hl"
                        app:layout_constraintEnd_toStartOf="@+id/fetterHLSpinner"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/flTextView"/>

                <TextView
                        android:id="@+id/fetterHRTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hr"
                        app:layout_constraintEnd_toStartOf="@+id/fetterHRSpinner"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/fetterHLSpinner"
                        app:layout_constraintTop_toTopOf="@+id/fetterHLSpinner"/>

            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>